fix spacing of upper bar on songs page

--- a/index.less
+++ b/index.less
@@ -60,6 +60,15 @@
 	}
 }
 
+// ??? lol put this somewhere where it belongs
+#app-content {
+	background-color: @s-bg;
+
+	.library-header {
+		padding-top: 1%;
+	}
+}
+
 .app-chrome-item.playback-controls {
 	max-width: 550px !important;
 }
@@ -190,11 +199,6 @@
 // make bg solid black, ie dont render blurred img of album art as background
 .background {
 	display: none;
-}
-
-// ??? lol put this somewhere where it belongs
-#app-content {
-	background-color: @s-bg
 }
 
 // lower well brightness
